objects/Application__c.object
<CustomObject>
    <description>Application object to extend Lead applicants beyond 1 pair.</description>
    <fields>
        <fullName>Additional_Income_From_Other_Applicants__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Additional Income From Other Applicants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant_Address__c</fullName>
        <label>Applicant Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Age__c</fullName>
        <formula>MFLOOR((TODAY()-Birthdate__c)/365.25)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applicant_City__c</fullName>
        <label>Applicant City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Middle_Name__c</fullName>
        <label>Applicant Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Postal_Code__c</fullName>
        <label>Applicant Postal Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Social_Security_Number__c</fullName>
        <inlineHelpText>SSN - Social Security Number (US)
SIN - Social Insurance Number (Canada)</inlineHelpText>
        <label>Applicant SSN / SIN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_State__c</fullName>
        <label>Applicant State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Text__c</fullName>
        <formula>First_Name__c 
&amp; " " &amp; 
Applicant_Middle_Name__c
&amp; " " &amp; 
Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Case_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Gift_Funds_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Application Gift Funds Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Hear_About_Unison__c</fullName>
        <label>Application Hear About Unison</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Names__c</fullName>
        <label>Application Names</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assets_Bank_Acct__c</fullName>
        <label>Assets Bank Acct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Brokerage_Acct__c</fullName>
        <label>Assets Brokerage Acct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Months_Reserves__c</fullName>
        <label>Assets Months Reserves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assets_Other_Real_Estate__c</fullName>
        <label>Assets Other Real Estate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Other__c</fullName>
        <label>Assets Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Retirement_Acct__c</fullName>
        <label>Assets Retirement Acct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COVID_19_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field</description>
        <label>COVID-19 Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Address__c</fullName>
        <label>Co-Applicant Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Age__c</fullName>
        <formula>MFLOOR((TODAY()- Co_Applicant_Birthdate__c )/365.25)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Co-Applicant Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Birthdate__c</fullName>
        <label>Co-Applicant Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_City__c</fullName>
        <label>Co-Applicant City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Middle_Name__c</fullName>
        <label>Co-Applicant Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Postal_Code__c</fullName>
        <label>Co-Applicant Postal Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Social_Security_Number__c</fullName>
        <label>Co-Applicant Social Security Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_State__c</fullName>
        <label>Co-Applicant State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Text__c</fullName>
        <formula>First_Name_Co__c

&amp; " " &amp; 

Co_Applicant_Middle_Name__c

&amp; " " &amp; 

Last_Name_Co__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Co-Applicant Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Declaration_Adult_Name_and_Relationship__c</fullName>
        <label>Declaration Adult Name and Relationship</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Declaration_Adults_not_on_Title__c</fullName>
        <label>Declaration_Adults_not_on_Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Bankruptcy_Co__c</fullName>
        <label>Declaration Bankruptcy (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Bankruptcy__c</fullName>
        <label>Declaration Bankruptcy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Deed_in_Lieu_Co__c</fullName>
        <label>Declaration Deed in Lieu (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Deed_in_Lieu__c</fullName>
        <label>Declaration Deed in Lieu</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Delinquency_Co__c</fullName>
        <label>Declaration Delinquency (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Delinquency__c</fullName>
        <label>Declaration Delinquency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Explanation_Co__c</fullName>
        <label>Declaration Explanation (Co)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Declaration_Explanation__c</fullName>
        <label>Declaration Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Declaration_Felony_Co__c</fullName>
        <label>Declaration Felony (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Felony__c</fullName>
        <label>Declaration Felony</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Foreclosure_Co__c</fullName>
        <label>Declaration Foreclosure (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Foreclosure__c</fullName>
        <label>Declaration Foreclosure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Intend_to_Occupy_Co__c</fullName>
        <label>Declaration Intend to Occupy (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Intend_to_Occupy__c</fullName>
        <label>Declaration Intend to Occupy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Intent_of_Proceeds__c</fullName>
        <label>Declaration_Intent_of_Proceeds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Declaration_Lawsuit_Co__c</fullName>
        <label>Declaration Lawsuit (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Lawsuit__c</fullName>
        <label>Declaration Lawsuit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Outstanding_Judgments_Co__c</fullName>
        <label>Declaration Outstanding Judgments (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Outstanding_Judgments__c</fullName>
        <label>Declaration Outstanding Judgments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Permanent_Resident_Co__c</fullName>
        <label>Declaration Permanent Resident (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Permanent_Resident__c</fullName>
        <label>Declaration Permanent Resident</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Power_of_Attorney_Co__c</fullName>
        <label>Declaration Power of Attorney (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Power_of_Attorney__c</fullName>
        <label>Declaration Power of Attorney</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_US_Citizen_Co__c</fullName>
        <label>Declaration US Citizen (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_US_Citizen__c</fullName>
        <label>Declaration US Citizen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Let_Affiliates_Market_Co__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Let Affiliates Market (Co)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Let_Affiliates_Market__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Let Affiliates Market</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Share_with_Non_Affiliates_Co__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Share with Non Affiliates (Co)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Share_with_Non_Affiliates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Share with Non Affiliates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DontShareCreditworthinessInformation_Co__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DontShareCreditworthinessInformation (Co</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DontShareCreditworthinessInformation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DontShareCreditworthinessInformation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Co__c</fullName>
        <label>Email (Co)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employer_Address_Co__c</fullName>
        <label>Employer Address (Co)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Address__c</fullName>
        <label>Employer Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name_Co__c</fullName>
        <label>Employer Name (Co)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Phone_Co__c</fullName>
        <label>Employer Phone (Co)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employer_Phone__c</fullName>
        <label>Employer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Monthly_Income_Co__c</fullName>
        <label>Estimated Total Monthly Income (Co)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Monthly_Income__c</fullName>
        <label>Estimated Total Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Name_Co__c</fullName>
        <label>First Name (Co)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_Co__c</fullName>
        <label>Gender (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highest_Degree_Earned_Co__c</fullName>
        <label>Highest Degree Earned (Co)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highest_Degree_Earned__c</fullName>
        <label>Highest Degree Earned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_FirstREX__c</fullName>
        <label>How did you hear about FirstREX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Base_Co__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Income Monthly Base (Co)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Base__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Income Monthly Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Bonuses_Co__c</fullName>
        <label>Income Monthly Bonuses (Co)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Bonuses__c</fullName>
        <label>Income Monthly Bonuses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Commissions_Co__c</fullName>
        <label>Income Monthly Commissions (Co)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Commissions__c</fullName>
        <label>Income Monthly Commissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Div_Interest_Co__c</fullName>
        <label>Income Monthly Div/Interest (Co)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Div_Interest__c</fullName>
        <label>Income Monthly Div/Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Other_Co__c</fullName>
        <label>Income Monthly Other (Co)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Other__c</fullName>
        <label>Income Monthly Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Overtime_Co__c</fullName>
        <label>Income Monthly Overtime (Co)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Overtime__c</fullName>
        <label>Income Monthly Overtime</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Social_Security_Co__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Income Monthly Social Security (Co)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Social_Security__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Income Monthly Social Security</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Industry_Co__c</fullName>
        <label>Industry (Co)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_there_Co_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is there Co-App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name_Co__c</fullName>
        <label>Last Name (Co)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Case_Safe_ID__c</fullName>
        <formula>Lead__r.Case_Safe_ID__c</formula>
        <label>Lead Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marital_Status_Co__c</fullName>
        <label>Marital Status (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marital_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marital_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mercury_Phone__c</fullName>
        <formula>RIGHT( Phone__c , 10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mercury Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone_Co__c</fullName>
        <label>MobilePhone (Co)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>MobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Months_in_Current_Job_Co__c</fullName>
        <label>Months in Current Job (Co)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_in_Current_Job__c</fullName>
        <label>Month in Current Job</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Case_Safe_ID__c</fullName>
        <formula>Opportunity__r.Case_Safe_Id__c</formula>
        <label>Opp Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Monthly_First_Mortgage__c</fullName>
        <label>Payment Monthly First Mortgage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Monthly_HOA__c</fullName>
        <label>Payment Monthly HOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Monthly_Insurance__c</fullName>
        <label>Payment Monthly Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Monthly_Rent__c</fullName>
        <label>Payment Monthly Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Monthly_Second_Mortgage__c</fullName>
        <label>Payment Monthly Second Mortgage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Monthly_Taxes__c</fullName>
        <label>Payment Monthly Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Total_Monthly_Housing__c</fullName>
        <formula>Payment_Monthly_Rent__c + Payment_Monthly_First_Mortgage__c + Payment_Monthly_Second_Mortgage__c + Payment_Monthly_Taxes__c + Payment_Monthly_Insurance__c + Payment_Monthly_HOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Total Monthly Housing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Persons_on_Title_Dropdown__c</fullName>
        <label>Persons_on_Title_Dropdown</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Co__c</fullName>
        <label>Phone (Co)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone_Co__c</fullName>
        <label>Preferred Phone (Co)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone__c</fullName>
        <label>Preferred Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profession_Co__c</fullName>
        <label>Profession (Co)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <label>Profession</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Propert_Years_Owned__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Property Years Owned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Number_of_Years__c</fullName>
        <label>Property Number of Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Years_Planning_to_Stay__c</fullName>
        <label>Property Years Planning to Stay</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pull_Applicant_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pull Applicant Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pull_Co_Applicant_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pull Co-Applicant Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pull_Credit_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pull Credit Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retired_Co__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retired (Co)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Co__c</fullName>
        <label>School (Co)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Employed_Co__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self-Employed (Co)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self-Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Taxes_and_Insurance_Escrowed__c</fullName>
        <label>Taxes and Insurance Escrowed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_Co__c</fullName>
        <label>Title (Co)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone_Co__c</fullName>
        <label>Work Phone (Co)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Years_In_This_Profession_Co__c</fullName>
        <label>Years In This Profession (Co)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_In_This_Profession__c</fullName>
        <label>Years In This Profession</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_On_This_Job__c</fullName>
        <label>Years On This Job</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_of_School_Co__c</fullName>
        <label>Years of School (Co)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_of_School__c</fullName>
        <label>Years of School</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_on_This_Job_Co__c</fullName>
        <label>Years on This Job (Co)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Application</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Credit_can_only_be_pulled_in_IDD</fullName>
        <active>false</active>
        <description>Credit cannot be pulled on the Opportunity if stage != “IDD”</description>
        <errorConditionFormula>(Pull_Credit_Report__c || Pull_Applicant_Only__c || Pull_Co_Applicant_Only__c) &amp;&amp; !ISPICKVAL(Opportunity__r.StageName,"Investment Due Diligence")</errorConditionFormula>
        <errorMessage>Credit can only be pulled in IDD</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Income_not_Null</fullName>
        <active>false</active>
        <errorConditionFormula>if ( OR (ISNULL( Income_Monthly_Base__c ),
         ISNULL ( Income_Monthly_Social_Security__c ),
         AND (ISNULL 
      (Income_Monthly_Social_Security_Co__c),Is_there_Co_App__c ),
  AND (ISNULL( Income_Monthly_Base_Co__c),  Is_there_Co_App__c)), 

TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Income Monthly Base and Income Social Security must be a number 0 and greater</errorMessage>
    </validationRules>
</CustomObject>